--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- section start -->
     <section>
 
-        <article style="position: relative; top: -1em;">
-            <table align="center" border="0" height="70" width="600" cellspacing="5" cellpadding="3">
+        <article style="padding-left: 280px;">
+            <table  border="0" height="70" width="600" cellspacing="5" cellpadding="3">
                 <tr style="font-size:18px; text-decoration:underline">
                     <td>Kaç Kişilik: 8 kişilik</td>
                     <td>Hazırlama Süresi: 25 dakika</td>
